--- a/views/editProduct.ejs
+++ b/views/editProduct.ejs
@@ -3,7 +3,7 @@
 
 <h2>Edit product</h2>
 
-<form action="/product/edit" method="POST" enctype="multipart/form-data">
+<form action="/product/edit/<%= product._id %>" method="POST" enctype="multipart/form-data">
     <label>Name:</label><br>
     <input type="text" name="name" value="<%= product.name %>" required><br><br>
 
