--- a/views/index.ejs
+++ b/views/index.ejs
@@ -21,7 +21,7 @@
         <td>₹ <%= product.price %></td>
         <td><%= product.description %></td>
         <td>
-            <a href="product/edit/<%= product._id %>">Edit</a>
+            <a href="/product/edit/<%= product._id %>">Edit</a>
 
             <a href="/product/delete/<%= product._id %>">Delete</a>
         </td>
